# corridas_FastAPI

./: .env  .env.example  main.py  pyproject.toml  tests.http
app/: database.py
app/Schema/: avaliacao.py  classe.py  corrida.py  metodo_pagamento.py  motorista.py  motorista_veiculo.py  pagamentos.py  passageiro.py  tipo_combustivel.py  usuario.py  veiculo.py
app/model/: avaliacao.py  classe.py  corrida.py  motorista.py  motorista_veiculo.py  pagamentos.py  passageiro.py  usuario.py
app/route/: avaliacao.py  classe.py  corrida.py  metodo_pagamento.py  modelo_veiculo.py  motorista.py  motorista_veiculo.py  pagamentos.py  passageiro.py  servico.py  tipo_combustivel.py  usuario.py  veiculo.py
