[project]
name = "corridas-fastapi"
version = "0.1.0"
description = "API de corridas estilo Uber com FastAPI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.48",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "cryptography>=46.0.5",
]
